Bug 294785 - muon crashed while selecting packages for reinstallation
Summary: muon crashed while selecting packages for reinstallation
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 1.2.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-25 01:56 UTC by sanket
Modified: 2012-02-25 18:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.4, 1.3.0, 1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sanket 2012-02-25 01:56:06 UTC
Application: muon (1.2.1 "Caustic Carrionite")
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-15-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:

muon crashed while selecting grub2 for reinstallation. 4 grub packages were already installed and while selecting these packages for reinstallation, accedently selected a packages that wasn't already installed. then marked all the selected packages with "mark for reinstallation". selection was dont by ctrl+select (holding ctrl key so all selected packages can be marked at ones) muon crashed while packages were being marked.

-- Backtrace:
Application: Muon Package Manager (muon), signal: Segmentation fault
[KCrash Handler]
#7  0x03cea4f2 in pkgRecords::Lookup(pkgCache::VerFileIterator const&) () from /usr/lib/libapt-pkg.so.4.11
#8  0x03d1ba8b in pkgAcqArchive::pkgAcqArchive(pkgAcquire*, pkgSourceList*, pkgRecords*, pkgCache::VerIterator const&, std::string&) () from /usr/lib/libapt-pkg.so.4.11
#9  0x03ce6e3c in pkgPackageManager::GetArchives(pkgAcquire*, pkgSourceList*, pkgRecords*) () from /usr/lib/libapt-pkg.so.4.11
#10 0x00802f25 in QApt::Backend::downloadSize (this=0xa2e6258) at /build/buildd/qapt-1.2.1/src/backend.cpp:456
#11 0x0013383f in StatusWidget::updateStatus (this=0xa306e70) at /build/buildd/muon-1.2.1/libmuon/StatusWidget.cpp:128
#12 0x00133f24 in StatusWidget::qt_metacall (this=0xa306e70, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfcccbe4) at /build/buildd/muon-1.2.1/obj-i686-linux-gnu/libmuon/StatusWidget.moc:82
#13 0x0069cb7d in metacall (argv=0xbfcccbe4, idx=30, cl=QMetaObject::InvokeMetaMethod, object=0xa306e70) at kernel/qmetaobject.cpp:237
#14 QMetaObject::metacall (object=0xa306e70, cl=QMetaObject::InvokeMetaMethod, idx=30, argv=0xbfcccbe4) at kernel/qmetaobject.cpp:232
#15 0x006aba6a in QMetaObject::activate (sender=0xa2e6258, m=0x837cb8, local_signal_index=3, argv=0x0) at kernel/qobject.cpp:3278
#16 0x00827c15 in QApt::Backend::packageChanged (this=0xa2e6258) at /build/buildd/qapt-1.2.1/obj-i686-linux-gnu/src/moc_backend.cxx:237
#17 0x0080387b in QApt::Backend::packageChanged (this=0xa2e6258, package=0xa691058) at /build/buildd/qapt-1.2.1/src/backend.cpp:941
#18 0x00813b28 in QApt::Package::setReInstall (this=0xa691058) at /build/buildd/qapt-1.2.1/src/package.cpp:1199
#19 0x001422b2 in PackageWidget::setReInstall (this=0xa0135a0, package=0xa691058) at /build/buildd/muon-1.2.1/libmuon/PackageModel/PackageWidget.cpp:507
#20 0x001427d0 in PackageWidget::actOnPackages (this=0xa0135a0, action=QApt::Package::ToReInstall) at /build/buildd/muon-1.2.1/libmuon/PackageModel/PackageWidget.cpp:439
#21 0x00142973 in PackageWidget::setPackagesReInstall (this=0xa0135a0) at /build/buildd/muon-1.2.1/libmuon/PackageModel/PackageWidget.cpp:514
#22 0x00143ad7 in PackageWidget::qt_metacall (this=0xa0135a0, _c=QMetaObject::InvokeMetaMethod, _id=18, _a=0xbfccce58) at /build/buildd/muon-1.2.1/obj-i686-linux-gnu/libmuon/PackageWidget.moc:134
#23 0x080544f3 in ManagerWidget::qt_metacall (this=0xa0135a0, _c=QMetaObject::InvokeMetaMethod, _id=45, _a=0xbfccce58) at /build/buildd/muon-1.2.1/obj-i686-linux-gnu/muon/ManagerWidget.moc:73
#24 0x0069cb7d in metacall (argv=0xbfccce58, idx=45, cl=QMetaObject::InvokeMetaMethod, object=0xa0135a0) at kernel/qmetaobject.cpp:237
#25 QMetaObject::metacall (object=0xa0135a0, cl=QMetaObject::InvokeMetaMethod, idx=45, argv=0xbfccce58) at kernel/qmetaobject.cpp:232
#26 0x006aba6a in QMetaObject::activate (sender=0xa018e20, m=0x1886458, local_signal_index=1, argv=0xbfccce58) at kernel/qobject.cpp:3278
#27 0x00f3686d in QAction::triggered (this=0xa018e20, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#28 0x00f36b0b in QAction::activate (this=0xa018e20, event=QAction::Trigger) at kernel/qaction.cpp:1257
#29 0x013dfb63 in QMenuPrivate::activateCausedStack (this=0xa99dbd8, causedStack=..., action=0xa018e20, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1005
#30 0x013e63ff in QMenuPrivate::activateAction (this=0xa99dbd8, action=0xa018e20, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1097
#31 0x013e9145 in QMenu::mouseReleaseEvent (this=0xbfccdd54, e=0xbfccd57c) at widgets/qmenu.cpp:2296
#32 0x00c71fbc in KMenu::mouseReleaseEvent (this=0xbfccdd54, e=0xbfccd57c) at ../../kdeui/widgets/kmenu.cpp:464
#33 0x00f97fc8 in QWidget::event (this=0xbfccdd54, event=0xbfccd57c) at kernel/qwidget.cpp:8295
#34 0x013e7bbc in QMenu::event (this=0xbfccdd54, e=0xbfccd57c) at widgets/qmenu.cpp:2405
#35 0x00f3dd84 in notify_helper (e=0xbfccd57c, receiver=0xbfccdd54, this=0x9f06858) at kernel/qapplication.cpp:4486
#36 QApplicationPrivate::notify_helper (this=0x9f06858, receiver=0xbfccdd54, e=0xbfccd57c) at kernel/qapplication.cpp:4458
#37 0x00f43deb in QApplication::notify (this=0x9f06858, receiver=0xbfccdd54, e=0xbfccd57c) at kernel/qapplication.cpp:4047
#38 0x00b93971 in KApplication::notify (this=0xbfccedec, receiver=0xbfccdd54, event=0xbfccd57c) at ../../kdeui/kernel/kapplication.cpp:311
#39 0x0069619e in QCoreApplication::notifyInternal (this=0xbfccedec, receiver=0xbfccdd54, event=0xbfccd57c) at kernel/qcoreapplication.cpp:787
#40 0x00f3ed45 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#41 QApplicationPrivate::sendMouseEvent (receiver=0xbfccdd54, event=0xbfccd57c, alienWidget=0x0, nativeWidget=0xbfccdd54, buttonDown=0x18a8eb4, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#42 0x00fcba3a in QETWidget::translateMouseEvent (this=0xbfccdd54, event=0xbfccd9fc) at kernel/qapplication_x11.cpp:4505
#43 0x00fc9e8d in QApplication::x11ProcessEvent (this=0xbfccedec, event=0xbfccd9fc) at kernel/qapplication_x11.cpp:3693
#44 0x00ff628c in x11EventSourceDispatch (s=0x9f018c0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#45 0x07c7e25f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#46 0x07c7e990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#47 0x07c7ec2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#48 0x006c4ada in QEventDispatcherGlib::processEvents (this=0x9ee23a0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#49 0x00ff5e7a in QGuiEventDispatcherGlib::processEvents (this=0x9ee23a0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#50 0x006951dd in QEventLoop::processEvents (this=0xbfccdd00, flags=...) at kernel/qeventloop.cpp:149
#51 0x00695421 in QEventLoop::exec (this=0xbfccdd00, flags=...) at kernel/qeventloop.cpp:201
#52 0x013e3787 in QMenu::exec (this=0xbfccdd54, p=..., action=0x0) at widgets/qmenu.cpp:2049
#53 0x00141c33 in PackageWidget::contextMenuRequested (this=0xa0135a0, pos=...) at /build/buildd/muon-1.2.1/libmuon/PackageModel/PackageWidget.cpp:346
#54 0x001439ca in PackageWidget::qt_metacall (this=0xa0135a0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbfccdee8) at /build/buildd/muon-1.2.1/obj-i686-linux-gnu/libmuon/PackageWidget.moc:120
#55 0x080544f3 in ManagerWidget::qt_metacall (this=0xa0135a0, _c=QMetaObject::InvokeMetaMethod, _id=32, _a=0xbfccdee8) at /build/buildd/muon-1.2.1/obj-i686-linux-gnu/muon/ManagerWidget.moc:73
#56 0x0069cb7d in metacall (argv=0xbfccdee8, idx=32, cl=QMetaObject::InvokeMetaMethod, object=0xa0135a0) at kernel/qmetaobject.cpp:237
#57 QMetaObject::metacall (object=0xa0135a0, cl=QMetaObject::InvokeMetaMethod, idx=32, argv=0xbfccdee8) at kernel/qmetaobject.cpp:232
#58 0x006aba6a in QMetaObject::activate (sender=0xa01ab88, m=0x18874fc, local_signal_index=0, argv=0xbfccdee8) at kernel/qobject.cpp:3278
#59 0x00f8de75 in QWidget::customContextMenuRequested (this=0xa01ab88, _t1=...) at .moc/release-shared/moc_qwidget.cpp:360
#60 0x00f98de6 in QWidget::event (this=0xa01ab88, event=0xbfcce47c) at kernel/qwidget.cpp:8465
#61 0x0139d285 in QFrame::event (this=0xa01ab88, e=0xbfcce47c) at widgets/qframe.cpp:557
#62 0x01431354 in QAbstractScrollArea::event (this=0xa01ab88, e=0xbfcce47c) at widgets/qabstractscrollarea.cpp:996
#63 0x014d419c in QAbstractItemView::event (this=0xa01ab88, event=0xbfcce47c) at itemviews/qabstractitemview.cpp:1564
#64 0x00f3dd84 in notify_helper (e=0xbfcce47c, receiver=0xa01ab88, this=0x9f06858) at kernel/qapplication.cpp:4486
#65 QApplicationPrivate::notify_helper (this=0x9f06858, receiver=0xa01ab88, e=0xbfcce47c) at kernel/qapplication.cpp:4458
#66 0x00f437c4 in QApplication::notify (this=0xa01ab88, receiver=0xa01ab88, e=0xbfcce47c) at kernel/qapplication.cpp:4126
#67 0x00b93971 in KApplication::notify (this=0xbfccedec, receiver=0xa01ab88, event=0xbfcce47c) at ../../kdeui/kernel/kapplication.cpp:311
#68 0x0069619e in QCoreApplication::notifyInternal (this=0xbfccedec, receiver=0xa01ab88, event=0xbfcce47c) at kernel/qcoreapplication.cpp:787
#69 0x00f3bb9d in sendSpontaneousEvent (event=0xbfcce47c, receiver=0xa01ab88) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#70 qt_sendSpontaneousEvent (receiver=0xa01ab88, event=0xbfcce47c) at kernel/qapplication.cpp:5480
#71 0x00ff1a6b in QKeyMapper::sendKeyEvent (keyWidget=0xa01ab88, grab=false, type=QEvent::KeyPress, code=16777301, modifiers=) at kernel/qkeymapper_x11.cpp:1858
#72 0x00ff1d95 in QKeyMapperPrivate::translateKeyEvent (this=0x9f2e0a8, keyWidget=0xa01ab88, event=0xbfccea3c, grab=false) at kernel/qkeymapper_x11.cpp:1836
#73 0x00fc9a35 in QApplication::x11ProcessEvent (this=0xbfccedec, event=0xbfccea3c) at kernel/qapplication_x11.cpp:3586
#74 0x00ff628c in x11EventSourceDispatch (s=0x9f018c0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#75 0x07c7e25f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#76 0x07c7e990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#77 0x07c7ec2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#78 0x006c4ada in QEventDispatcherGlib::processEvents (this=0x9ee23a0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#79 0x00ff5e7a in QGuiEventDispatcherGlib::processEvents (this=0x9ee23a0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#80 0x006951dd in QEventLoop::processEvents (this=0xbfcced44, flags=...) at kernel/qeventloop.cpp:149
#81 0x00695421 in QEventLoop::exec (this=0xbfcced44, flags=...) at kernel/qeventloop.cpp:201
#82 0x0069a19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#83 0x00f3b924 in QApplication::exec () at kernel/qapplication.cpp:3760
#84 0x080508be in main (argc=307413, argv=0x4ba77) at /build/buildd/muon-1.2.1/muon/main.cpp:56

Reported using DrKonqi
Comment 1 Jonathan Thomas 2012-02-25 18:14:23 UTC
Steps to reproduce:

- Mark an uninstalled package for re-installation by multi-marking via the right-click menu
- Mark a second package for installation that will require a download. When the statusbar tries to calculate the download size, Muon will crash.
Comment 2 Jonathan Thomas 2012-02-25 18:23:06 UTC
Git commit 9dcf887f5714c4facbad59b835662a374df5a66d by Jonathan Thomas.
Committed on 25/02/2012 at 19:22.
Pushed by jmthomas into branch '1.2'.

Ensure to not try to mark uninstalled packages for reinstallation.
FIXED-IN:1.2.4, 1.3.0, 1.4

M  +2    -1    libmuon/PackageModel/PackageWidget.cpp

http://commits.kde.org/muon/9dcf887f5714c4facbad59b835662a374df5a66d
Comment 3 Jonathan Thomas 2012-02-25 18:23:06 UTC
Git commit 2dea580ec04ce4caebcc4d17e6152a36d8767411 by Jonathan Thomas.
Committed on 25/02/2012 at 19:22.
Pushed by jmthomas into branch '1.3'.

Ensure to not try to mark uninstalled packages for reinstallation.
FIXED-IN:1.2.4, 1.3.0, 1.4

M  +2    -1    muon/PackageModel/PackageWidget.cpp

http://commits.kde.org/muon/2dea580ec04ce4caebcc4d17e6152a36d8767411
Comment 4 Jonathan Thomas 2012-02-25 18:23:07 UTC
Git commit 58b605eaa77340153e718eb205ddd25f723df410 by Jonathan Thomas.
Committed on 25/02/2012 at 19:22.
Pushed by jmthomas into branch 'master'.

Ensure to not try to mark uninstalled packages for reinstallation.
FIXED-IN:1.2.4, 1.3.0, 1.4

M  +2    -1    muon/PackageModel/PackageWidget.cpp

http://commits.kde.org/muon/58b605eaa77340153e718eb205ddd25f723df410