Ensure to not try to mark uninstalled packages for reinstallation.

BUG:294785
FIXED-IN:1.2.4, 1.3.0, 1.4